# STORE_PROJECT

./: .env.sample  README.md  pyproject.toml  requirements.txt
config/: settings.py
static/assets/img/favicons/: manifest.json
store/: admin.py  models.py
store/migrations/: 0001_initial.py  0002_alter_category_image_alter_subcategory_image.py  0003_cart_cartitem.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
